--- a/Github+API+v4+Preview+with+GraphQL.ipynb
+++ b/Github+API+v4+Preview+with+GraphQL.ipynb
@@ -14,6 +14,8 @@
     "\n",
     "3) Previously unavailable data fields (e.g. reactions) \n",
     "\n",
+    "4) Less event driven\n",
+    "\n",
     "The single endpoint trades looking up endpoint formats and return values for looking up query field and connector values. IMHO the latter is more advantageous, as endpoint syntax and formatting can get unruly in a hurry. Having a single endpoint lets data scientists focus on their queries, staying relegated to JSON. The queries follow (mostly) intuitive graph pattern wherein one traverses the docs/graphs until reaching the desired node(s). The reactions in particular permit further sentiment and engagement analyses, which could build on my previous work. \n",
     "\n",
     "and some negatives: \n",
