--- a/Github+API+v4+Preview+with+GraphQL.ipynb
+++ b/Github+API+v4+Preview+with+GraphQL.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Github API v4 preview using GraphQL**\n",
+    "## Github API v4 preview using GraphQL ##\n",
     "\n",
     "Github's API is moving (slowly) over to GraphQL in place of their REST API. Given my prior exploratory analysis of Github's data [found here](https://github.com/EldritchJS/kono-notebook/blob/master/kono.ipynb) I set out to see what moving to the new API buys me, or loses me, as it were. Here's a few things that stand out as positives:\n",
     "\n",
@@ -26,7 +26,8 @@
     "\n",
     "3) API still very much in flux\n",
     "\n",
-    "    \n",
+    "\n",
+    "### Getting Started ###\n",
     "In terms of connections, to get started, one need only generate a personal access token on Github's site. \n",
     "\n",
     "Programmitically, one needs the requests and json Python libraries imported, per the following. Additionally, the single endpoint is defined along with my Github authorization token (which is a whole bunch of Xs for what's in the repo, go get your own token please)"
@@ -49,6 +50,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Organization member query ###\n",
+    "\n",
     "I'll start with a call to get the members of my team's Github organization. Note: there's a rate limiting factor of 100 for the number of members to returned. One can either get the first or last 100. Pagination is provided for larger groups. Also of interest: our mascot's account is spelled Radly, as opposed to Radley or Radlee."
    ]
   },
