Added Dashboard preview

--- a/Github+API+v4+Preview+with+GraphQL.ipynb
+++ b/Github+API+v4+Preview+with+GraphQL.ipynb
@@ -35,15 +35,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import json\n",
+    "import pandas as pd\n",
     "\n",
     "endpoint = 'https://api.github.com/graphql'\n",
-    "headers = {'Authorization': 'bearer PLACEYOURGITHUBTOKENHERE'}\n"
+    "headers = {'Authorization': 'bearer e434e3a20bc9933d09f566b3bfa9b6f9a8bfc8a5'}\n"
    ]
   },
   {
@@ -57,29 +58,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = ''' \\\n",
-    "{ \\\n",
-    "    organization(login: \\\"radanalyticsio\\\") { \\\n",
-    "    members(first: 100) { \\\n",
-    "      edges { \\\n",
-    "        node { \\\n",
-    "          name \\\n",
-    "          avatarUrl \\\n",
-    "        } \\\n",
-    "      } \\\n",
-    "    } \\\n",
-    "  } \\\n",
-    "} \\\n",
+    "query = ''' \n",
+    "{ \n",
+    "    organization(login: \\\"radanalyticsio\\\") { \n",
+    "    pinnedRepositories(first: 100) { \n",
+    "        edges { \n",
+    "          node { \n",
+    "            name\n",
+    "          } \n",
+    "        } \n",
+    "    } \n",
+    "    members(first: 100) { \n",
+    "      edges { \n",
+    "        node { \n",
+    "          name \n",
+    "          avatarUrl \n",
+    "        } \n",
+    "      } \n",
+    "    } \n",
+    "  } \n",
+    "} \n",
     "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = requests.post(endpoint, json.dumps({\"query\": query}), headers=headers)\n",
+    "#print(json.dumps(r.json(), indent=2, sort_keys=True))\n",
+    "df = pd.read_json(json.dumps(r.json()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'node': {'name': 'Will Benton', 'avatarUrl': 'https://avatars2.githubusercontent.com/u/1161?v=4'}}, {'node': {'name': 'Matthew Farrellee', 'avatarUrl': 'https://avatars2.githubusercontent.com/u/112653?v=4'}}, {'node': {'name': 'michael mccune', 'avatarUrl': 'https://avatars3.githubusercontent.com/u/190649?v=4'}}, {'node': {'name': 'Erik Erlandson', 'avatarUrl': 'https://avatars0.githubusercontent.com/u/259898?v=4'}}, {'node': {'name': 'Rui Vieira', 'avatarUrl': 'https://avatars1.githubusercontent.com/u/327909?v=4'}}, {'node': {'name': 'Jirka Kremser', 'avatarUrl': 'https://avatars0.githubusercontent.com/u/535866?v=4'}}, {'node': {'name': 'Ricardo Martinelli de Oliveira', 'avatarUrl': 'https://avatars2.githubusercontent.com/u/813430?v=4'}}, {'node': {'name': 'Chad Roberts', 'avatarUrl': 'https://avatars0.githubusercontent.com/u/889317?v=4'}}, {'node': {'name': 'Trevor McKay', 'avatarUrl': 'https://avatars0.githubusercontent.com/u/1172537?v=4'}}, {'node': {'name': 'Zak Hassan', 'avatarUrl': 'https://avatars3.githubusercontent.com/u/1269759?v=4'}}, {'node': {'name': 'Pete MacKinnon', 'avatarUrl': 'https://avatars0.githubusercontent.com/u/2380545?v=4'}}, {'node': {'name': 'Diane Feddema', 'avatarUrl': 'https://avatars0.githubusercontent.com/u/3208719?v=4'}}, {'node': {'name': 'Mike Barrett', 'avatarUrl': 'https://avatars1.githubusercontent.com/u/4482333?v=4'}}, {'node': {'name': 'Sophie Watson', 'avatarUrl': 'https://avatars2.githubusercontent.com/u/5311289?v=4'}}, {'node': {'name': 'Paolo Patierno', 'avatarUrl': 'https://avatars0.githubusercontent.com/u/5842311?v=4'}}, {'node': {'name': 'Subin Modeel', 'avatarUrl': 'https://avatars2.githubusercontent.com/u/7363264?v=4'}}, {'node': {'name': 'Rikki Endsley', 'avatarUrl': 'https://avatars3.githubusercontent.com/u/7748596?v=4'}}, {'node': {'name': 'Jason Schlessman', 'avatarUrl': 'https://avatars2.githubusercontent.com/u/10504328?v=4'}}, {'node': {'name': 'Rob Geada', 'avatarUrl': 'https://avatars3.githubusercontent.com/u/20345051?v=4'}}, {'node': {'name': None, 'avatarUrl': 'https://avatars0.githubusercontent.com/u/22115662?v=4'}}, {'node': {'name': 'Becky', 'avatarUrl': 'https://avatars0.githubusercontent.com/u/22922596?v=4'}}, {'node': {'name': None, 'avatarUrl': 'https://avatars1.githubusercontent.com/u/30834866?v=4'}}, {'node': {'name': 'Radly', 'avatarUrl': 'https://avatars3.githubusercontent.com/u/31731932?v=4'}}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['data']['organization']['members']['edges'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +208,7 @@
       "          {\n",
       "            \"node\": {\n",
       "              \"avatarUrl\": \"https://avatars2.githubusercontent.com/u/5311289?v=4\",\n",
-      "              \"name\": null\n",
+      "              \"name\": \"Sophie Watson\"\n",
       "            }\n",
       "          },\n",
       "          {\n",
@@ -238,14 +274,15 @@
     }
    ],
    "source": [
-    "r = requests.post(endpoint, json.dumps({\"query\": query}), headers=headers)\n",
-    "print(json.dumps(r.json(), indent=2, sort_keys=True))"
+    "#print(json.dumps(r.json(), indent=2, sort_keys=True))\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Individual user's owned repo query ###\n",
+    "\n",
     "Next I can do a simple query of the first 100 repositories I own, listing the repo's name, disk usage, and number of forks."
    ]
   },
@@ -563,13 +600,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here's a call to get the members of our organization. Note: there's a rate limiting factor of 100 for the number of members to returned. One can either get the first or last 100. Pagination is provided for larger groups. Also of interest: our mascot's account is spelled Radly, as opposed to Radley or Radlee."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Individual repo stars, watches, and issues query ###\n",
+    "\n",
     "Once I have a repository I'm interested in, I can acquire data pertaining to said repository. In the next example I get a list of names of users who have starred the equoid-openshift repo, those who are watching the repo, and the number of issues. All fields of interest in my previous work on repository health metrics. "
    ]
   },
@@ -664,9 +696,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python with Pixiedust (Spark 2.2)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pythonwithpixiedustspark22"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
