Welp, so much for hiding

--- a/Github GraphQL Dashboard.ipynb
+++ b/Github GraphQL Dashboard.ipynb
@@ -79,7 +79,7 @@
     "import pandas as pd\n",
     "\n",
     "endpoint = 'https://api.github.com/graphql'\n",
-    "headers = {'Authorization': 'bearer e434e3a20bc9933d09f566b3bfa9b6f9a8bfc8a5'}"
+    "headers = {'Authorization': 'bearer xxxxxxxxxxxxxxxxxxxxx'}"
    ]
   },
   {
