User input added

--- a/Github GraphQL Dashboard.ipynb
+++ b/Github GraphQL Dashboard.ipynb
@@ -457,6 +457,48 @@
    "source": [
     "import matplotlib.pyplot as plt"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Activity - Event breakdown\n",
+    "\n",
+    "Interest - Forks, issues, comments, PRs, Follows\n",
+    "\n",
+    "Responsiveness - Time to address issues, Time to act on PRs\n",
+    "\n",
+    "Contributor Demeanor - Commits, reactions? \n",
+    "\n",
+    "Starring - Class of its own\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Interest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "# Forks\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Issues\n",
+    "# Comments\n",
+    "# PRs\n",
+    "# Follows"
+   ]
   }
  ],
  "metadata": {
@@ -495,7 +537,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   },
   "widgets": {
    "state": {
