Added PR response time computation and plot

--- a/Github GraphQL Dashboard.ipynb
+++ b/Github GraphQL Dashboard.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -79,7 +79,7 @@
     "import pandas as pd\n",
     "\n",
     "endpoint = 'https://api.github.com/graphql'\n",
-    "headers = {'Authorization': 'bearer xxxxxxxxxxxxxxxxxxxxx'}"
+    "headers = {'Authorization': 'bearer 5b151dd275afed8d9e51f4fb063b4aa36305c346'}"
    ]
   },
   {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -220,17 +220,7 @@
      }
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "login                                                  EldritchJS\n",
-      "repositories    {'edges': [{'node': {'name': 'mimisbrunnr', 'd...\n",
-      "Name: repositoryOwner, dtype: object\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "query=''' \n",
     "{ \n",
@@ -250,7 +240,70 @@
     "'''\n",
     "r = requests.post(endpoint, json.dumps({\"query\": query}), headers=headers)\n",
     "userdf = pd.read_json(json.dumps(r.json()), orient='split')['repositoryOwner']\n",
-    "print(userdf)"
+    "#print(userdf)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['mimisbrunnr',\n",
+       " 'kono',\n",
+       " 'eldritchjs.github.io',\n",
+       " 'radanalyticsio.github.io',\n",
+       " 'ophicleide-training',\n",
+       " 'ophicleide-web',\n",
+       " 'calculator-sample',\n",
+       " 'scotch-io.github.io',\n",
+       " 'dinky',\n",
+       " 'nationalparks-py',\n",
+       " 'word-fountain-amq',\n",
+       " 'equoid-data-handler',\n",
+       " 'workshop-notebook',\n",
+       " 'base-notebook',\n",
+       " 'workshop',\n",
+       " 'kono-notebook',\n",
+       " 'stackhub',\n",
+       " 'kono-webapp',\n",
+       " 'kono-metrics',\n",
+       " 'pixiedust',\n",
+       " 'rhinsights',\n",
+       " 'pixiedust-notebook',\n",
+       " 'datascienceworkflowtalk',\n",
+       " 'django-example',\n",
+       " 'insights-anonymizer',\n",
+       " 'insights-anonymizer',\n",
+       " 'countminsketch',\n",
+       " 'topk-datasci',\n",
+       " 'topk-receiver-amq',\n",
+       " 'topk-amq',\n",
+       " 'insights-anonymizer',\n",
+       " 'jgrafzahl',\n",
+       " 'streaming-amqp',\n",
+       " 'equoid-data-publisher',\n",
+       " 'equoid-openshift',\n",
+       " 'tesserae',\n",
+       " 'SWGoHBot',\n",
+       " 'github-graphql-notebook',\n",
+       " 'infinispan-dump']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = r.json()['data']['repositoryOwner']['repositories']['edges']\n",
+    "repos = []\n",
+    "for repo in data:\n",
+    "    repos.append(repo['node']['name'])\n",
+    "    \n",
+    "repos"
    ]
   },
   {
