Added issues computation and plot

--- a/Kono with GraphQL.ipynb
+++ b/Kono with GraphQL.ipynb
@@ -239,14 +239,23 @@
     "            turnaround = determineResolutionTime(parseGitHubUTCTimeStamp(node['node']['closedAt']),parseGitHubUTCTimeStamp(node['node']['createdAt']))\n",
     "            prTimes.append(turnaround)\n",
     "    return prTimes\n",
-    "    \n",
+    "\n",
+    "def computeIssueResponseTimes(repoData):\n",
+    "    issueData = repoData['issues']['edges']\n",
+    "    issueTimes = []\n",
+    "    for node in issueData:\n",
+    "        if node['node']['closed'] == True:\n",
+    "            turnaround = determineResolutionTime(parseGitHubUTCTimeStamp(node['node']['closedAt']),parseGitHubUTCTimeStamp(node['node']['createdAt']))\n",
+    "            issueTimes.append(turnaround)\n",
+    "    return issueTimes\n",
+    "\n",
     "def acquireRepoData(ownerName, repoName, token):\n",
     "    endpointGitHub = 'https://api.github.com/graphql'\n",
     "    headersGitHub = {'Authorization': 'bearer ' + token}\n",
     "    \n",
     "    query = repoQuery.substitute(owner=ownerName,repo=repoName)\n",
     "    r = requests.post(endpointGitHub, json.dumps({\"query\": query}), headers=headersGitHub)\n",
-    "    return r.json()['data']['repository']\n"
+    "    return r.json()['data']['repository']"
    ]
   },
   {
@@ -364,6 +373,24 @@
     "axes.set(ylabel=\"\",xlabel=\"Days\")\n",
     "plt.title(titleStr)\n",
     "axes.yaxis.set_major_locator(MaxNLocator(integer=True))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "issueTimes = computeIssueResponseTimes(repo_data)\n",
+    "openedIssues = repo_data['issues']['totalCount']\n",
+    "sns.set()\n",
+    "plt.hist(issueTimes, color = 'red')\n",
+    "\n",
+    "titleStr=('Issue Time to Close: (' + str(openedIssues) + ' opened, ' + str(len(issueTimes)) + ' closed)')\n",
+    "axes = plt.gca()\n",
+    "axes.set(ylabel=\"\",xlabel=\"Days\")\n",
+    "plt.title(titleStr)\n",
+    "axes.yaxis.set_major_locator(MaxNLocator(integer=True))"
    ]
   },
   {
