Added some explanatory text

--- a/Kono with GraphQL.ipynb
+++ b/Kono with GraphQL.ipynb
@@ -29,6 +29,7 @@
    "cell_type": "code",
    "execution_count": 70,
    "metadata": {
+    "collapsed": true,
     "extensions": {
      "jupyter_dashboards": {
       "version": 1,
@@ -63,9 +64,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setup ###\n",
+    "I'll begin by setting up an instance of the Vader sentiment intensity analyzer, as well as template strings for the queries I plan on sending to the Github GraphQL API. ownerQuery will return the first 100 repos associated with a github username, while repoQuery returns metrics for a given repo (note: the Github GraphQL API requires both the repo's name as well as its owner's name.)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 71,
    "metadata": {
+    "collapsed": true,
     "extensions": {
      "jupyter_dashboards": {
       "version": 1,
@@ -161,9 +171,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data acquisition functions ###\n",
+    "The functions below provide the means for submitting the queries specified above to the Github GraphQL API. In addition, they provide relevant data either by solely traversing the JSON returned or a combination of this and extraction of necessary fields (i.e. repo names in acquireOwnerRepos.)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 72,
    "metadata": {
+    "collapsed": true,
     "extensions": {
      "jupyter_dashboards": {
       "version": 1,
@@ -196,6 +215,32 @@
     "        repos.append(repo['node']['name'])\n",
     "    return repos\n",
     "\n",
+    "def acquireRepoData(ownerName, repoName, token):\n",
+    "    endpointGitHub = 'https://api.github.com/graphql'\n",
+    "    headersGitHub = {'Authorization': 'bearer ' + token}\n",
+    "    \n",
+    "    query = repoQuery.substitute(owner=ownerName,repo=repoName)\n",
+    "    r = requests.post(endpointGitHub, json.dumps({\"query\": query}), headers=headersGitHub)\n",
+    "    return r.json()['data']['repository']\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Metric computation functions ###\n",
+    "The below functions compute average sentiments for pull request comments as well as turnaround time for closing pull requests and issues. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "def computeVaderSentiment(data):\n",
     "    prData = data['pullRequests']['edges']\n",
     "\n",
@@ -247,20 +292,11 @@
     "        if node['node']['closed'] == True:\n",
     "            turnaround = determineResolutionTime(parseGitHubUTCTimeStamp(node['node']['closedAt']),parseGitHubUTCTimeStamp(node['node']['createdAt']))\n",
     "            issueTimes.append(turnaround)\n",
-    "    return issueTimes\n",
-    "\n",
-    "def acquireRepoData(ownerName, repoName, token):\n",
-    "    endpointGitHub = 'https://api.github.com/graphql'\n",
-    "    headersGitHub = {'Authorization': 'bearer ' + token}\n",
-    "    \n",
-    "    query = repoQuery.substitute(owner=ownerName,repo=repoName)\n",
-    "    r = requests.post(endpointGitHub, json.dumps({\"query\": query}), headers=headersGitHub)\n",
-    "    return r.json()['data']['repository']"
+    "    return issueTimes\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 73,
+   "cell_type": "markdown",
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -276,10 +312,8 @@
      }
     }
    },
-   "outputs": [],
    "source": [
-    "repo_data = acquireRepoData('eldritchjs', 'equoid-data-handler', 'Insert Token Here')\n",
-    "sentiments = computeVaderSentiment(repo_data)"
+    "Below is an example of our acquiring repo data and computing sentiments on pull request comments, followed by a visualization of the results."
    ]
   },
   {
@@ -317,6 +351,9 @@
     }
    ],
    "source": [
+    "repo_data = acquireRepoData('eldritchjs', 'equoid-data-handler', 'Insert Token Here')\n",
+    "sentiments = computeVaderSentiment(repo_data)\n",
+    "\n",
     "ind = np.arange(1, 4)\n",
     "\n",
     "pneg, pneu, ppos = plt.bar(ind, sentiments)\n",
@@ -328,6 +365,13 @@
     "plt.ylabel('Percent')\n",
     "plt.title('Pull Request Comment Sentiments')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we compute the turnaround times for pull requests and plot a histogram in terms of turnaround in days."
    ]
   },
   {
@@ -376,9 +420,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally we do the same for issue turnaround time. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "issueTimes = computeIssueResponseTimes(repo_data)\n",
@@ -397,6 +450,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "extensions": {
      "jupyter_dashboards": {
       "version": 1,
@@ -425,6 +479,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "extensions": {
      "jupyter_dashboards": {
       "version": 1,
@@ -510,6 +565,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "extensions": {
      "jupyter_dashboards": {
       "version": 1,
@@ -575,6 +631,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "extensions": {
      "jupyter_dashboards": {
       "version": 1,
@@ -598,6 +655,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "extensions": {
      "jupyter_dashboards": {
       "version": 1,
