Resolved rendering issue

--- a/Kono with GraphQL.ipynb
+++ b/Kono with GraphQL.ipynb
@@ -29,7 +29,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true,
     "extensions": {
      "jupyter_dashboards": {
       "version": 1,
@@ -64,29 +63,32 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Setup ###\n",
-    "I'll begin by setting up an instance of the Vader sentiment intensity analyzer, as well as template strings for the queries I plan on sending to the Github GraphQL API. ownerQuery will return the first 100 repos associated with a github username, while repoQuery returns metrics for a given repo (note: the Github GraphQL API requires both the repo's name as well as its owner's name.)\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {},
+       "report_default": {
+        "hidden": true
+       }
+      }
+     }
+    }
+   },
    "outputs": [],
    "source": [
-    "repoName = '<YOUR_REPO_NAME>'\n",
-    "ownerName = '<YOUR_REPO_OWNER_NAME>'\n",
-    "token = '<YOUR_TOKEN>'"
+    "repoName = '<YOUR REPO NAME>'\n",
+    "ownerName = '<YOUR REPO OWNER NAME>'\n",
+    "token = '<YOUR GITHUB TOKEN>'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true,
     "extensions": {
      "jupyter_dashboards": {
       "version": 1,
@@ -195,22 +197,14 @@
     "        }\n",
     "    }\n",
     "}\n",
-    "''')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Data acquisition functions ###\n",
-    "The functions below provide the means for submitting the queries specified above to the Github GraphQL API. In addition, they provide relevant data either by solely traversing the JSON returned or a combination of this and extraction of necessary fields (i.e. repo names in acquireOwnerRepos.)"
+    "''')\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true,
     "extensions": {
      "jupyter_dashboards": {
       "version": 1,
@@ -243,7 +237,6 @@
     "        repos.append(repo['node']['name'])\n",
     "    return repos\n",
     "\n",
-<<<<<<< HEAD
     "def computeSentiment(edgeData):\n",
     "    neg = 0\n",
     "    pos = 0\n",
@@ -267,36 +260,6 @@
     "        neu = neu*100.0/total\n",
     "        pos = pos*100.0/total          \n",
     "    return neg, neu, pos\n",
-=======
-    "def acquireRepoData(ownerName, repoName, token):\n",
-    "    endpointGitHub = 'https://api.github.com/graphql'\n",
-    "    headersGitHub = {'Authorization': 'bearer ' + token}\n",
-    "    \n",
-    "    query = repoQuery.substitute(owner=ownerName,repo=repoName)\n",
-    "    r = requests.post(endpointGitHub, json.dumps({\"query\": query}), headers=headersGitHub)\n",
-    "    return r.json()['data']['repository']\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Metric computation functions ###\n",
-    "The below functions compute average sentiments for pull request comments as well as turnaround time for closing pull requests and issues. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def computeVaderSentiment(data):\n",
-    "    prData = data['pullRequests']['edges']\n",
->>>>>>> 34ac74dfbcce211a316047e0fec5325757b63c46
     "\n",
     "def computePRSentiment(edgeData):\n",
     "    neg = 0\n",
@@ -342,7 +305,6 @@
     "    for node in edgeData:\n",
     "        if node['node']['closed'] == True:\n",
     "            turnaround = determineResolutionTime(parseGitHubUTCTimeStamp(node['node']['closedAt']),parseGitHubUTCTimeStamp(node['node']['createdAt']))\n",
-<<<<<<< HEAD
     "            times.append(turnaround)\n",
     "    return times\n",
     "\n",
@@ -358,24 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-=======
-    "            prTimes.append(turnaround)\n",
-    "    return prTimes\n",
-    "\n",
-    "def computeIssueResponseTimes(repoData):\n",
-    "    issueData = repoData['issues']['edges']\n",
-    "    issueTimes = []\n",
-    "    for node in issueData:\n",
-    "        if node['node']['closed'] == True:\n",
-    "            turnaround = determineResolutionTime(parseGitHubUTCTimeStamp(node['node']['closedAt']),parseGitHubUTCTimeStamp(node['node']['createdAt']))\n",
-    "            issueTimes.append(turnaround)\n",
-    "    return issueTimes\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
->>>>>>> 34ac74dfbcce211a316047e0fec5325757b63c46
+   "execution_count": 5,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -391,18 +336,33 @@
      }
     }
    },
+   "outputs": [],
    "source": [
-<<<<<<< HEAD
     "repo_data = acquireRepoData(ownerName, repoName, token)"
-=======
-    "Below is an example of our acquiring repo data and computing sentiments on pull request comments, followed by a visualization of the results."
->>>>>>> 34ac74dfbcce211a316047e0fec5325757b63c46
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {
+        "col": 0,
+        "height": 9,
+        "hidden": false,
+        "row": 4,
+        "width": 4
+       },
+       "report_default": {
+        "hidden": false
+       }
+      }
+     }
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -416,7 +376,6 @@
     }
    ],
    "source": [
-<<<<<<< HEAD
     "prSentiments = computePRSentiment(repo_data['pullRequests']['edges'])\n",
     "commitSentiments = computeSentiment(repo_data['commitComments']['edges'])\n",
     "issueSentiments = computeSentiment(repo_data['issues']['edges'])\n",
@@ -430,12 +389,6 @@
     "g = sns.factorplot(x=\"SentimentType\",y=\"Value\",col=\"MessageType\",\\\n",
     "                    data=sdf,kind=\"bar\", ci=None,\\\n",
     "                    palette=pal,saturation=0.5, aspect=0.8)\n",
-=======
-    "repo_data = acquireRepoData('eldritchjs', 'equoid-data-handler', 'Insert Token Here')\n",
-    "sentiments = computeVaderSentiment(repo_data)\n",
-    "\n",
-    "ind = np.arange(1, 4)\n",
->>>>>>> 34ac74dfbcce211a316047e0fec5325757b63c46
     "\n",
     "g=g.set_axis_labels(\"\", \"Percentage\")\\\n",
     "        .set(ylim=(0, 100))\\\n",
@@ -447,15 +400,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next we compute the turnaround times for pull requests and plot a histogram in terms of turnaround in days."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -497,21 +443,25 @@
     "axes = plt.gca()\n",
     "axes.set(ylabel=\"\",xlabel=\"Days\")\n",
     "plt.title(titleStr)\n",
-    "axes.yaxis.set_major_locator(MaxNLocator(integer=True))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Finally we do the same for issue turnaround time. "
+    "axes.yaxis.set_major_locator(MaxNLocator(integer=True))\n"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "version": 1,
+      "views": {
+       "grid_default": {},
+       "report_default": {
+        "hidden": false
+       }
+      }
+     }
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -524,13 +474,6 @@
      "output_type": "display_data"
     }
    ],
-=======
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
->>>>>>> 34ac74dfbcce211a316047e0fec5325757b63c46
    "source": [
     "issueTimes = computeResponseTimes(repo_data['issues']['edges'])\n",
     "openedIssues = repo_data['issues']['totalCount']\n",
@@ -548,7 +491,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "extensions": {
      "jupyter_dashboards": {
       "version": 1,
@@ -577,7 +519,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "extensions": {
      "jupyter_dashboards": {
       "version": 1,
@@ -636,7 +577,7 @@
     "    repo_name = repo_selected\n",
     "    print('username: ' + user_name)\n",
     "    print(' reponame: ' + repo_name)\n",
-    "    repo_data = acquireRepoData('eldritchjs', 'equoid-data-handler', 'Insert Token Here')\n",
+    "    repo_data = acquireRepoData('eldritchjs', 'equoid-data-handler', '5b151dd275afed8d9e51f4fb063b4aa36305c346')\n",
     "    sentiments = computeVaderSentiment(repo_data)\n",
     "    indices = ('Neg', 'Neu', 'Pos')\n",
     "    return {\n",
@@ -663,7 +604,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "extensions": {
      "jupyter_dashboards": {
       "version": 1,
@@ -729,7 +669,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "extensions": {
      "jupyter_dashboards": {
       "version": 1,
@@ -748,28 +687,6 @@
    "source": [
     "show_app(app)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "extensions": {
-     "jupyter_dashboards": {
-      "version": 1,
-      "views": {
-       "grid_default": {
-        "hidden": true
-       },
-       "report_default": {
-        "hidden": true
-       }
-      }
-     }
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
