Cleaned up packages, added requirements.txt and quickstart

--- a/Kono with GraphQL.ipynb
+++ b/Kono with GraphQL.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -55,16 +55,18 @@
     "import ipywidgets as widgets\n",
     "import datetime as dt\n",
     "from IPython.display import display\n",
-    "import numpy as np\n",
+    "from IPython.display import clear_output\n",
     "import seaborn as sns\n",
     "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
     "from string import Template\n",
-    "from matplotlib.ticker import MaxNLocator"
+    "from matplotlib.ticker import MaxNLocator\n",
+    "import time\n",
+    "import pylab as pl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -180,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -297,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -345,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -384,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -418,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -442,7 +444,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e03e27422f62420ebfd5ee6a9a6c567b",
+       "model_id": "77f64501117d4425a67c29fc5f839f0e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -456,7 +458,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad4f603de5ec45588b99b4c4dbbb6d22",
+       "model_id": "b5bfb82d45574f11a8da063935e6e180",
        "version_major": 2,
        "version_minor": 0
       },
@@ -470,7 +472,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4c09be400344a63acf83346244d7c46",
+       "model_id": "878d1e71e99546c29e8267c52185830d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -484,7 +486,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6dd2fcd03132425a9a21853de08aa29d",
+       "model_id": "e6808184157e41d4a9862f2c9c209d15",
        "version_major": 2,
        "version_minor": 0
       },
@@ -498,7 +500,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e551e3916299445981f67cf95cbcc8a9",
+       "model_id": "99294b0719cf40f9a5dd1b5ee42bf7cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -511,12 +513,6 @@
     }
    ],
    "source": [
-    "import time\n",
-    "import pylab as pl\n",
-    "from IPython import display\n",
-    "import matplotlib.pyplot as plt\n",
-    "from IPython.display import clear_output\n",
-    "\n",
     "out = widgets.Output()\n",
     "\n",
     "def on_compute_clicked(b):\n",
@@ -535,10 +531,10 @@
     "computeButton = widgets.Button(description='Compute Metrics')\n",
     "computeButton.on_click(on_compute_clicked)\n",
     "\n",
-    "display.display(repoText)\n",
-    "display.display(ownerText)\n",
-    "display.display(tokenText)\n",
-    "display.display(computeButton)\n",
+    "display(repoText)\n",
+    "display(ownerText)\n",
+    "display(tokenText)\n",
+    "display(computeButton)\n",
     " \n",
     "out"
    ]
@@ -567,7 +563,6 @@
     "import dash_core_components as dcc\n",
     "import dash_html_components as html\n",
     "import plotly.graph_objs as go\n",
-    "import pandas as pd\n",
     "from dash.dependencies import Input, Output"
    ]
   },
