Added some more text

--- a/Kono with GraphQL.ipynb
+++ b/Kono with GraphQL.ipynb
@@ -421,6 +421,25 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def handleMisc(repo_data):\n",
+    "    retString = ''\n",
+    "    if(repo_data['vulnerabilityAlerts']['totalCount']==0):\n",
+    "        retString += 'You may want to enable vulnerability alerts\\n'\n",
+    "    else:\n",
+    "        retString += str(repo_data['vulnerabilityAlerts']['totalCount']) + ' resolved vulnerability alerts\\n'\n",
+    "    retString += str(repo_data['forkCount']) + ' forks\\n'\n",
+    "    retString += str(repo_data['watchers']['totalCount']) + ' watchers\\n'\n",
+    "    retString += str(repo_data['stargazers']['totalCount']) + ' stargazers\\n'\n",
+    "\n",
+    "    return retString"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
@@ -438,13 +457,14 @@
        }
       }
      }
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cfdbadcd658445bcb39980ef16b5e36f",
+       "model_id": "4ebeb87278ce4ad598ff3d7d4741b355",
        "version_major": 2,
        "version_minor": 0
       },
@@ -458,7 +478,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "89c29a3c0a744f779628dc7a748470d5",
+       "model_id": "4f3be6c696c54ca5b14951f9282b06d0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -472,7 +492,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d0ff83fe17cb43778f7b0341729b8c1e",
+       "model_id": "1bd3c5cb63724a37aa79c51beba5f96f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -486,7 +506,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b57cfb39cda7461a986fb573c2c0bc50",
+       "model_id": "90ca1a396ca449099d92de014b8cd777",
        "version_major": 2,
        "version_minor": 0
       },
@@ -500,7 +520,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca1c709764c64477b4a024cd2348b30d",
+       "model_id": "7b8a8b4ce2ae44edbc7138716b568db0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -522,12 +542,16 @@
     "        handleSentiments(repo_data)\n",
     "        handlePRs(repo_data)\n",
     "        handleIssues(repo_data)\n",
+    "        outputText.visible=True\n",
+    "        outString = handleMisc(repo_data)\n",
+    "        outputText.value=outString\n",
+    "        display(outputText)\n",
     "        plt.show()\n",
     "\n",
     "repoText = widgets.Text(description='Repo')\n",
     "ownerText = widgets.Text(description='Repo Owner')\n",
     "tokenText = widgets.Text(description='API Token')\n",
-    "\n",
+    "outputText = widgets.Textarea(visible=False)\n",
     "computeButton = widgets.Button(description='Compute Metrics')\n",
     "computeButton.on_click(on_compute_clicked)\n",
     "\n",
